add Jupyter Notebook dev dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ exclude = [
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = ">=6.29"
+notebook = ">=7.1"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = ">=7.3"
