--- a/examples/.env.template
+++ b/examples/.env.template
@@ -1,3 +1,2 @@
+LLAMA_API_KEY=[... Llama API key if running on Llama services ...]
 OPENAI_API_KEY=[... OpenAI API key if running on OpenAI services ...]
-LLAMA_API_KEY=[... Meta Llama API key if running on OpenAI services ...]
-
