--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,7 @@ httpx = ">=0.27"
 loguru = ">=0.7"
 pydantic = ">=2.7"
 python-dotenv = ">=1.0"
+torch = ">=2.2,<2.3"  # 2.3 fails installing on Mac with M chip
 tqdm = ">=4.66"
 
 # optional dependencies required by extras
