--- a/examples/FinanceBench/expert-plans-map.yml
+++ b/examples/FinanceBench/expert-plans-map.yml
@@ -1,1 +1,49 @@
 financebench_id_00499: capital-intensiveness
+financebench_id_00807: quick-ratio
+financebench_id_02987: fixed-asset-turnover-ratio
+financebench_id_07966: capex-as-percent-of-revenue
+financebench_id_04735: operating-cash-flow-ratio
+financebench_id_03856: operating-cash-flow-ratio
+financebench_id_00438: operating-margin-profile
+financebench_id_00591: free-cash-flow-conversion
+financebench_id_00540: inventory-turnover-ratio
+financebench_id_10420: return-on-assets
+financebench_id_06655: dpo
+financebench_id_00799: quick-ratio
+financebench_id_00684: gross-margin-profile
+financebench_id_03069: da-margin
+financebench_id_00222: quick-ratio
+financebench_id_04254: unadjusted-ebitda
+financebench_id_00070: working-capital
+financebench_id_02608: net-profit-margin
+financebench_id_00685: gross-margin-profile
+financebench_id_04660: working-capital-ratio
+financebench_id_00678: gross-margin-profile
+financebench_id_00585: effective-tax-rate
+financebench_id_03473: return-on-assets
+financebench_id_09724: cogs-margin
+financebench_id_06272: dividend-payout-ratio
+financebench_id_10130: dpo
+financebench_id_02981: operating-margin-profile
+financebench_id_00005: working-capital
+financebench_id_05915: fixed-asset-turnover-ratio
+financebench_id_00790: capital-intensiveness
+financebench_id_04103: cash-conversion-cycle
+financebench_id_03471: working-capital-ratio
+financebench_id_04854: free-cash-flow
+financebench_id_10136: retention-ratio
+financebench_id_10499: inventory-turnover-ratio
+financebench_id_04412: asset-turnover-ratio
+financebench_id_03031: working-capital
+financebench_id_03849: capex-as-percent-of-revenue
+financebench_id_01911: interest-coverage-ratio
+financebench_id_04458: ebitda-margin
+financebench_id_04302: cogs-margin
+financebench_id_04080: inventory-turnover-ratio
+financebench_id_00080: working-capital
+financebench_id_04481: ebitda-margin
+financebench_id_00216: quick-ratio
+financebench_id_00215: capital-intensiveness
+financebench_id_06247: dpo
+financebench_id_04784: operating-margin-profile
+financebench_id_06741: ebitda-margin
