refactor examples/FinanceBench/expert-knowledge.txt > Profit-Utlization Metric Formulas

--- a/examples/FinanceBench/expert-plans.yml
+++ b/examples/FinanceBench/expert-plans.yml
@@ -113,8 +113,8 @@ net-profit-margin:
         income statement
 
 
-# PROFIT UTILIZATION METRIC EVALUATION
-# ====================================
+# PROFIT-UTILIZATION / CAPITAL-RETURN METRIC EVALUATION
+# =====================================================
 
 # interest-coverage-ratio  # TODO
 
