update financebench_id_01319 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -271,7 +271,7 @@ financebench_id_01319:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer states 0, zero, and/or that restructuring costs are not explicitly found
+    the answer states 0, zero, and/or that restructuring costs are not explicitly reported
 
 
 financebench_id_00540:
