--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1433,7 +1433,7 @@ financebench_id_03718:
   answer: 0.4%
   page(s): '63'
 
-  category: 3-CALC-COMPLEX
+  category: 2-CALC-CHANGE
   correctness: >-
     the answer contains a calculated CAGR percentage value that is in the range from 0.400% to 0.500%
     (if the answer is a single number, assume that it is that calculated CAGR percentage value)
