--- a/examples/FinanceBench/expert-plans-map.yml
+++ b/examples/FinanceBench/expert-plans-map.yml
@@ -13,14 +13,14 @@ financebench_id_00799: quick-ratio  # TODO: quick-ratio-profile (improvement)
 financebench_id_00684: gross-margin-profile
 financebench_id_03069: da-margin
 financebench_id_00222: quick-ratio
-financebench_id_01279: cash-flow-activities
+# financebench_id_01279: cash-flow-activities
 financebench_id_00723: fin-svcs-perf
 financebench_id_00720: fin-svcs-perf
 financebench_id_04254: unadjusted-ebitda
 financebench_id_00070: working-capital
 financebench_id_02608: net-profit-margin  # TODO: avg
 financebench_id_00685: gross-margin-profile  # TODO: compare
-financebench_id_01275: cash-flow-activities
+# financebench_id_01275: cash-flow-activities
 financebench_id_04660: working-capital-ratio
 financebench_id_00678: gross-margin-profile  # TODO: compare
 financebench_id_00585: effective-tax-rate
@@ -46,7 +46,7 @@ financebench_id_00552: debt
 financebench_id_04458: ebitda-margin
 financebench_id_04302: cogs-margin
 financebench_id_04080: inventory-turnover-ratio
-financebench_id_01163: cash-flow-activities
+# financebench_id_01163: cash-flow-activities
 financebench_id_00080: working-capital
 financebench_id_03620: unadjusted-ebitda  # TODO: but also less CapEx for question
 financebench_id_04481: ebitda-margin
